--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "run-s clean && run-p build:*",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
+    "build:css": "node-sass --include-path src/assets src/assets/index.scss build/assets/index.css",
     "fix": "run-s fix:*",
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
     "fix:tslint": "tslint --fix --project .",
@@ -56,6 +57,7 @@
     "codecov": "^3.1.0",
     "cz-conventional-changelog": "^2.1.0",
     "gh-pages": "^2.0.1",
+    "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^13.1.0",
     "opn-cli": "^4.0.0",
