--- a/package.json
+++ b/package.json
@@ -51,7 +51,10 @@
   "engines": {
     "node": ">=8.9"
   },
-  "dependencies": {},
+  "dependencies": {
+    "beedle": "^0.7.3",
+    "materialize-css": "^1.0.0"
+  },
   "devDependencies": {
     "ava": "1.0.0-beta.7",
     "codecov": "^3.1.0",
@@ -67,7 +70,7 @@
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-immutable": "^5.0.0",
-    "typedoc": "^0.13.0",
+    "typedoc": "^0.14.2",
     "typescript": "^3.1.6"
   },
   "ava": {
