--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
   },
   "dependencies": {
     "beedle": "^0.7.3",
+    "material-design-icons": "^3.0.1",
     "materialize-css": "^1.0.0"
   },
   "devDependencies": {
+    "@types/materialize-css": "^1.0.6",
     "ava": "1.0.0-beta.7",
     "codecov": "^3.1.0",
     "cz-conventional-changelog": "^2.1.0",
