--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,8 +36,8 @@
     // "emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */,
 
     "lib": ["es2017", "dom"],
-    "types": [],
-    "typeRoots": ["node_modules/@types", "src/types"]
+    "types": ["jest"],
+    "typeRoots": ["node_modules/@types"]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules/**"],
