--- a/package.json
+++ b/package.json
@@ -85,6 +85,9 @@
       "^.+\\.tsx?$": "ts-jest"
     },
     "collectCoverage": true,
-    "coverageReporters": ["json", "html"]
+    "coverageReporters": [
+      "json",
+      "html"
+    ]
   }
 }
