--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "node": ">=8.9"
   },
   "dependencies": {
-    "beedle": "^0.7.3",
     "material-design-icons": "^3.0.1",
     "materialize-css": "^1.0.0"
   },
@@ -79,7 +78,7 @@
   },
   "jest": {
     "roots": [
-      "<rootDir>/src"
+      "<rootDir>/__test__"
     ],
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
