--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "fix:tslint": "tslint --fix --project .",
     "test": "run-s build test:*",
     "test:lint": "tslint --project . && prettier \"src/**/*.ts\" --list-different",
-    "test:unit": "jest",
+    "test:unit": "jest --no-cache",
     "watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
     "cov": "run-s build test:unit -- --coverage && opn coverage/index.html",
     "doc": "run-s doc:html && opn build/docs/index.html",
