--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "expandable-node",
   "version": "1.0.0",
   "description": "A library for creating a tree like node structure.",
-  "main": "dist/expandable-node.umd.js",
-  "module": "dist/expandable-node.es5.js",
+  "main": "dist/js/expandable-node.umd.min.js",
+  "module": "dist/js/expandable-node.es5.min.js",
   "typings": "dist/types/expandable-node.d.ts",
   "repository": "https://github.com/mkolodiy/expandable-node",
   "license": "MIT",
@@ -15,7 +15,7 @@
   "scripts": {
     "describe": "npm-scripts-info",
     "build": "run-s clean && run-p build:*",
-    "build:main": "rollup -c config/rollup.config.prod.ts && rollup -c config/rollup.config.dev.ts && trash dist/expandable-node.es5.css",
+    "build:main": "rollup -c rollup.config.ts",
     "fix": "run-s fix:*",
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
     "fix:tslint": "tslint --fix --project .",
@@ -61,6 +61,15 @@
     "npm-run-all": "^4.1.5",
     "opn-cli": "^4.0.0",
     "prettier": "^1.15.2",
+    "rollup": "^1.17.0",
+    "rollup-plugin-commonjs": "^10.0.1",
+    "rollup-plugin-copy": "^3.1.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-terser": "^5.1.1",
+    "rollup-plugin-typescript2": "^0.22.1",
     "standard-version": "^4.4.0",
     "trash-cli": "^1.4.0",
     "ts-jest": "^24.0.2",
@@ -68,18 +77,7 @@
     "tslint-config-prettier": "^1.17.0",
     "tslint-immutable": "^5.0.0",
     "typedoc": "^0.14.2",
-    "typescript": "^3.1.6",
-    "rollup": "^1.17.0",
-    "rollup-plugin-commonjs": "^10.0.1",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-sass": "^1.2.2",
-    "rollup-plugin-scss": "^1.0.1",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-terser": "^5.1.1",
-    "rollup-plugin-typescript2": "^0.22.1",
-    "rollup-plugin-uglify": "^6.0.2"
+    "typescript": "^3.1.6"
   },
   "config": {
     "commitizen": {
