--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "opn-cli": "^4.0.0",
+    "postcss-inline-svg": "^4.1.0",
     "prettier": "^1.15.2",
     "rollup": "^1.17.0",
     "rollup-plugin-commonjs": "^10.0.1",
-    "rollup-plugin-copy": "^3.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
