--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expandable-node",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A library for creating a tree like node structure.",
   "main": "dist/js/expandable-node.umd.min.js",
   "module": "dist/js/expandable-node.es5.min.js",
@@ -32,7 +32,7 @@
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
     "version": "standard-version",
     "clean": "trash dist test coverage",
-    "prepare-release": "run-s test version cov:check doc:html version doc:publish"
+    "prepare-release": "run-s test cov:check doc:html version doc:publish"
   },
   "engines": {
     "node": ">=8.9"
@@ -49,11 +49,13 @@
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "opn-cli": "^4.0.0",
+    "postcss-banner": "^3.0.1",
     "postcss-inline-svg": "^4.1.0",
     "prettier": "^1.15.2",
     "rollup": "^1.17.0",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-license": "^0.11.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-sourcemaps": "^0.4.2",
