--- a/package.json
+++ b/package.json
@@ -32,14 +32,12 @@
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d dist/docs",
     "version": "standard-version",
     "clean": "trash dist test coverage",
-    "prepare-release": "run-s test cov:check doc:html version doc:publish"
+    "prepare-release": "run-s test cov:check doc:html doc:publish"
   },
   "engines": {
     "node": ">=8.9"
   },
-  "dependencies": {
-    "materialize-css": "^1.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^24.0.13",
     "@types/materialize-css": "^1.0.6",
@@ -59,9 +57,9 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-terser": "^5.1.1",
+    "rollup-plugin-terser": "^5.1.3",
     "rollup-plugin-typescript2": "^0.22.1",
-    "standard-version": "^4.4.0",
+    "standard-version": "^7.1.0",
     "trash-cli": "^1.4.0",
     "ts-jest": "^24.0.2",
     "tslint": "^5.11.0",
