--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "rollup -c rollup.config.ts",
     "fix": "run-s fix:*",
     "fix:prettier": "prettier \"src/**/*.ts\" --write",
-    "fix:tslint": "tslint --fix --project .",
+    "fix:eslint": "eslint .",
     "test": "run-s build test:*",
     "test:lint": "tslint --project . && prettier \"src/**/*.ts\" --list-different",
     "test:unit": "jest --no-cache",
@@ -37,36 +37,36 @@
   "engines": {
     "node": ">=8.9"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^24.9.1",
-    "@types/materialize-css": "^1.0.8",
-    "cz-conventional-changelog": "^2.1.0",
-    "gh-pages": "^2.2.0",
-    "jest": "^26.4.2",
-    "node-sass": "^4.14.1",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "@types/jest": "^27.0.2",
+    "@types/materialize-css": "^1.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "gh-pages": "^3.2.3",
+    "jest": "^27.3.1",
+    "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
-    "opn-cli": "^4.0.0",
-    "postcss-banner": "^3.0.2",
-    "postcss-inline-svg": "^4.1.0",
-    "prettier": "^1.19.1",
-    "rollup": "^1.32.1",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-license": "^2.2.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.9.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-terser": "^5.3.1",
-    "rollup-plugin-typescript2": "^0.22.1",
-    "standard-version": "^9.1.0",
+    "opn-cli": "^4.1.0",
+    "postcss-banner": "^4.0.1",
+    "postcss-inline-svg": "^5.0.0",
+    "prettier": "^2.4.1",
+    "rollup": "^2.60.0",
+    "rollup-plugin-postcss": "^4.0.1",
+    "rollup-plugin-sourcemaps": "^0.6.3",
+    "rollup-plugin-terser": "^7.0.2",
+    "standard-version": "^9.3.2",
     "trash-cli": "^4.0.0",
-    "ts-jest": "^26.3.0",
-    "tslint": "^5.20.1",
-    "tslint-config-prettier": "^1.17.0",
-    "tslint-immutable": "^5.0.0",
-    "typedoc": "^0.15.8",
-    "typescript": "^3.9.7"
+    "ts-jest": "^27.0.7",
+    "typedoc": "^0.22.9",
+    "typescript": "^4.4.4"
   },
   "config": {
     "commitizen": {
