--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,7 @@
 src
-test
+__test__
+docs
+.rpt2_cache
 tsconfig.json
 tsconfig.module.json
 tslint.json
@@ -12,3 +14,5 @@ build/docs
 coverage
 .nyc_output
 *.log
+.editorconfig
+rollup.config.ts
