--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "test": "run-s test:*",
     "test:lint": "eslint . && prettier \"src/**/*.ts\" \"__test__/**/*.ts\" --list-different",
     "test:unit": "jest --no-cache",
-    "cov": "run-s build test:unit -- --coverage && opn coverage/index.html",
-    "doc": "run-s doc:html && opn dist/docs/index.html",
+    "cov": "run-s build test:unit -- --coverage",
+    "doc": "run-s doc:html",
     "doc:html": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --out dist/docs",
     "doc:json": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --json dist/docs/typedoc.json",
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d dist/docs",
@@ -55,7 +55,6 @@
     "jest": "^27.3.1",
     "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
-    "opn-cli": "^4.1.0",
     "postcss-banner": "^4.0.1",
     "postcss-inline-svg": "^5.0.0",
     "prettier": "^2.4.1",
